# adaptive-difficulty-curriculum-mmlu-with-uncertainty-pacing

./: .gitignore  METHODOLOGY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
configs/: ablation.yaml  default.yaml
examples/: sample_questions.json
results/: results.json
scripts/: evaluate.py  predict.py  train.py  verify_setup.py
src/adaptive_difficulty_curriculum_mmlu_with_uncertainty_pacing/: __init__.py
src/adaptive_difficulty_curriculum_mmlu_with_uncertainty_pacing/evaluation/: __init__.py  analysis.py  metrics.py
src/adaptive_difficulty_curriculum_mmlu_with_uncertainty_pacing/models/: __init__.py  components.py  model.py
src/adaptive_difficulty_curriculum_mmlu_with_uncertainty_pacing/training/: __init__.py  trainer.py
src/adaptive_difficulty_curriculum_mmlu_with_uncertainty_pacing/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
